--- a/src/main/java/ulb/mis/view/LoginPatient.form
+++ b/src/main/java/ulb/mis/view/LoginPatient.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -66,10 +66,8 @@
                   <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabelcreateaccount" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="FirstNameTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="PasswordTextField" alignment="0" pref="123" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="FirstNameTextField" alignment="0" max="32767" attributes="0"/>
+                      <Component id="PasswordTextField" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="143" max="32767" attributes="0"/>
               </Group>
